--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <div class="content">
-    <h1 style="text-align: center">Hello REC Learners raj </h1>
+    <h1 style="text-align: center">Hello REC Learners data scientist raj and abel </h1>
 
 </div>
 {% endblock %}
